[package]
name = "apa"
version = "0.0.0"
authors = ["James Whaley <juicy66173@gmail.com>"]
description = "An arbitrary-precision arithmetic library."
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"

documentation = "https://docs.rs/apa"
repository = "https://github.com/Juici/jca"
homepage = "https://github.com/Juici/jca"

# TODO: Fill in categories and keywords as appropriate.
categories = []
keywords = []

[features]
default = []

std = []

[dependencies]
cfg-if = "1.0"
num-traits = "0.2"
num-integer = "0.1"

[dev-dependencies]
paste = "1.0"
quickcheck = "0.9"
