[package]
name = "apa"
version = "0.0.0"
authors = ["James Whaley <juicy66173@gmail.com>"]
description = "An arbitrary-precision arithmetic library."
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"

repository = "https://github.com/Juici/jca"
documentation = "https://docs.rs/apa"

# TODO: Fill in categories and keywords as appropriate.
categories = []
keywords = []

[features]
default = []

std = []

[dependencies]
cfg-if = "1.0"
static_assertions = "1.1"

libc = "0.2"

num-traits = "0.2"
num-integer = "0.1"
